--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "langchain>=1.2.7",
+    "grandalf>=0.8",
+    "ipython>=9.10.0",
+    "langchain>=1.2.10",
 ]
